Bug fixing: fixed the website layout issue not being on the center on zoomed out screens. Fixed the width of the navbar to follow the general width of the whole content. Fixed the paragraphs in the Meals.tsx that displays the appropriate text according to the situation ex: No favorite items - if there are no favorites and fixed its layout to always align center

--- a/src/index.css
+++ b/src/index.css
@@ -129,3 +129,9 @@
     @apply bg-background text-foreground font-poppins;
   }
 }
+
+div#root {
+  width: 100dvw;
+  display: flex;
+  justify-content: center;
+}
